# OpenVR-PairDriver

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  build.ps1  quick.ps1  test.ps1  version.txt
.githooks/: prepare-commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_WORKFLOW.md  SECURITY.md
core/src/common/: BuildChannel.h  CMakeLists.txt  DebugLogging.cpp  DebugLogging.h  DriverMemoryProbe.cpp  DriverMemoryProbe.h  HostSupervisorBase.cpp  HostSupervisorBase.h  JsonUtil.cpp  JsonUtil.h  LogPaths.cpp  LogPaths.h  MotionGate.h  Protocol.h  Win32Errors.cpp  Win32Errors.h  Win32Paths.cpp  Win32Paths.h  Win32Text.cpp  Win32Text.h
core/src/common/facetracking/: UpstreamShapeMap.h
core/src/common/inputhealth/: PageHinkley.h  PathClassifier.h  SnapshotDiagnostics.h  WelfordAccumulator.h
core/src/overlay/: CMakeLists.txt  CalibrationAnchor.cpp  CalibrationAnchor.h  DeviceFilters.cpp  DeviceFilters.h  DiscordPresence.cpp  DiscordPresence.h  DiscordPresenceComposer.cpp  DiscordPresenceComposer.h  FeaturePlugin.h  IpcClientBase.cpp  IpcClientBase.h  ManifestRegistration.cpp  ManifestRegistration.h  Migration.cpp  Migration.h  ShellContext.cpp  ShellContext.h  ShellFooter.cpp  ShellFooter.h  Theme.cpp  Theme.h  UiHelpers.h  UpdateNotice.cpp  UpdateNotice.h  VrOverlayHost.cpp  VrOverlayHost.h  face-module-sync.ps1  main.cpp  manifest.vrmanifest  openvr-pair.rc
driver_openvrpair/: driver.vrdrivermanifest
driver_wkopenvr/: driver.vrdrivermanifest
install/: installer.nsi
lib/: CMakeLists.txt
lib/discord-rpc/: LICENSE
modules/calibration/src/: CMakeLists.txt
modules/calibration/src/driver/: CMakeLists.txt
modules/calibration/src/overlay/: BuildStamp.h  CMakeLists.txt  Calibration.cpp  Calibration.h  CalibrationCalc.cpp  CalibrationCalc.h  CalibrationDebug.cpp  CalibrationMetrics.cpp  CalibrationMetrics.h  Configuration.cpp  IPCClient.cpp  IPCClient.h  MotionRecording.cpp  RotationMatrix3.h  SpaceCalibratorPlugin.cpp  SpaceCalibratorPlugin.h  SpaceCalibratorUmbrellaRuntime.cpp  TrackerLiveness.h  TranslationSolveDirect.cpp  UpdateChecker.cpp  Updater.cpp  UserInterface.cpp  UserInterface.h  UserInterfaceBanners.cpp  UserInterfaceBanners.h  UserInterfaceFooter.cpp  UserInterfaceTabsAdvanced.cpp  UserInterfaceTabsBasic.cpp  UserInterfaceTabsLogs.cpp  VRState.cpp  stdafx.h
modules/calibration/tools/replay/: CMakeLists.txt
modules/captions/src/driver/: CMakeLists.txt  CaptionsDriverModule.cpp  HostSupervisor.cpp  HostSupervisor.h  Logging.cpp  Logging.h
modules/facetracking/src/overlay/: AdvancedTab.cpp  AdvancedTab.h  BuildStamp.h  CMakeLists.txt  CalibrationTab.cpp  CalibrationTab.h  DriverTelemetryPoller.cpp  DriverTelemetryPoller.h  FacetrackingPlugin.cpp  FacetrackingPlugin.h  HostStatusPoller.cpp  HostStatusPoller.h  IPCClient.cpp  IPCClient.h  Logging.cpp  Logging.h  LogsSection.cpp  LogsSection.h  ModuleSources.cpp  ModuleSources.h  ModulesTab.cpp  ModulesTab.h  Profiles.cpp  Profiles.h  SettingsTab.cpp  SettingsTab.h
modules/inputhealth/src/driver/: CMakeLists.txt  InputHealthCompensation.cpp  InputHealthComponentRegistry.cpp  InputHealthComponentRegistry.h  InputHealthDriverModule.cpp  InputHealthHookInjector.cpp  InputHealthObservation.cpp  InputHealthObservation.h  InputHealthSnapshotPublisher.cpp  InputHealthSnapshotPublisher.h  InputHealthSnapshotStaging.cpp  InputHealthSnapshotStaging.h
modules/inputhealth/src/driver/inputhealth/: PerComponentStats.h
modules/inputhealth/src/overlay/: BuildStamp.h  CMakeLists.txt  Config.cpp  Config.h  DebugTab.cpp  DebugTab.h  DiagnosticsTab.cpp  DiagnosticsTab.h  IPCClient.cpp  IPCClient.h  InputHealthPlugin.cpp  InputHealthPlugin.h  LearningEngine.cpp  LearningEngine.h  Logging.cpp  Logging.h  Profiles.cpp  Profiles.h  SettingsTab.cpp  SettingsTab.h  SnapshotReader.cpp  SnapshotReader.h
modules/oscrouter/src/driver/: CMakeLists.txt  Logging.cpp  Logging.h  OscRouter.cpp  OscRouter.h  OscWire.cpp  OscWire.h  RouteTable.cpp  RouteTable.h  RouterPublishApi.cpp  RouterPublishApi.h  UdpSender.cpp  UdpSender.h
modules/translator/src/driver/: CMakeLists.txt  HostSupervisor.cpp  HostSupervisor.h  Logging.cpp  Logging.h  TranslatorDriverModule.cpp
modules/translator/src/host/: ActionBindings.cpp  ActionBindings.h  CMakeLists.txt  ChatboxPacer.cpp  ChatboxPacer.h  HostStatus.cpp  HostStatus.h  Logging.cpp  Logging.h  ModelDownloader.cpp  ModelDownloader.h  RouterPublisher.cpp  RouterPublisher.h  SileroVad.cpp  SileroVad.h  Translator.cpp  Translator.h  WasapiCapture.cpp  WasapiCapture.h  WhisperEngine.cpp  actions.json  bindings_knuckles.json  bindings_touch.json  bindings_vive.json  main.cpp  translator.vrmanifest
modules/translator/src/host/resources/: install-translator-pack.ps1
modules/translator/src/overlay/: CMakeLists.txt  HostStatusPoller.cpp  HostStatusPoller.h  TranslatorIpcClient.cpp  TranslatorIpcClient.h  TranslatorPlugin.cpp  TranslatorPlugin.h  TranslatorTab.cpp  TranslatorTab.h
modules/translator/tests/: CMakeLists.txt  translator_tests.cpp
src/driver/: CMakeLists.txt  FeatureFlags.cpp  FeatureFlags.h  IPCServer.cpp  IPCServer.h  InputHealthCompensation.h  InputHealthComponentRegistry.cpp  InputHealthHookInjector.cpp  InputHealthHookInjector.h  InputHealthSnapshotPublisher.cpp  InputHealthSnapshotStaging.cpp  InputHealthState.h  InterfaceHookInjector.cpp  InterfaceHookInjector.h  Logging.cpp  OpenVR-PairDriver.cpp  OpenVR-WKPairDriver.cpp  ServerTrackedDeviceProvider.cpp  ServerTrackedDeviceProvider.h  SkeletalHookInjector.h  dllmain.cpp
src/driver/inputhealth/: PerComponentStats.h
src/overlay/: CMakeLists.txt  FeaturePlugin.cpp  FeaturePlugin.h  Fonts.cpp  Fonts.h  Icons.h  IpcClientBase.cpp  IpcClientBase.h  ModulesTab.cpp  ModulesTab.h  ProfileStoreBase.h  ShellContext.cpp  ShellContext.h  ShellFooter.cpp  Sidebar.cpp  Sidebar.h  Theme.cpp  Theme.h  TopBar.cpp  TopBar.h  UiHelpers.h  Widgets.cpp  Widgets.h  main.cpp
tests/: CMakeLists.txt
wiki/: Architecture.md  Build.md  Changelog.md  Home.md  Module-Calibration.md  (+7 more)
(+187 files in other folders)
